@@ -1,5 +1,5 @@
 N:*:Default
-568
+570
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -568,4 +568,9 @@ They say that some cursed articles are too lovely to discard.
 They say that some creatures don't believe in magic.
 They say that you should learn to shoot yeeks.
 They say that even a level-100 priest might need potions of wisdom still.
+They say that antimagic shell is something other than antimagic shield.
+They say that amulet of anti-magic doesn't give antimagic shield.
+They say that 
+They say that 
+They say that 
 They say that 
