@@ -2376,7 +2376,8 @@ static bool wr_server_savefile(void)
 	{
 		artifact_type *a_ptr = &a_info[i];
 		wr_byte(a_ptr->cur_num);
-		wr_byte(0);
+		wr_byte(a_ptr->known);
+//		wr_byte(0);
 		wr_byte(0);
 		wr_byte(0);
 	}
